<resources>
    <string name="app_name">CliqUs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="stay_logged_in">Check the box to stay logged in</string>

    <!-- Nav Drawer -->
    <string name="event_finder_nav_header">Event Finder</string>
    <string name="profile_nav_entry">Profile</string>
    <string name="events_nav_entry">Events</string>
    <string name="questionnaire_nav_entry">Questionnaire</string>

    <string name="suggestions_nav_header">Suggestions</string>
    <string name="submit_event_nav_entry">Submit Event</string>
    <string name="submit_bug_nav_entry">Submit Bug</string>

    <string name="app_options_nav_entry">CliqUs Settings</string>
    <string name="settings_nav_entry">Settings</string>
    <string name="sign_out_nav_entry">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_time">Date Of Birth</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="past_events">Past Events</string>
    <string name="attending_upcoming_events">Attending Upcoming Events</string>
    <string name="comments">Comments</string>
    <string name="attending_this_event">Attendees</string>
    <string name="phone_number">Phone Number</string>

</resources>
