<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/event_finder_nav_header">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/profile_nav_entry" />
            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/events_nav_entry" />
            <item
                android:id="@+id/nav_questionnaire"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/questionnaire_nav_entry" />
        </menu>
    </item>

    <item android:title="@string/suggestions_nav_header">
        <menu>
            <item
                android:id="@+id/nav_submit_event"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/submit_event_nav_entry" />
            <item
                android:id="@+id/nav_submit_bug"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/submit_bug_nav_entry" />
        </menu>
    </item>

    <item android:title="@string/app_options_nav_entry">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings_nav_entry" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/logo"
                android:title="@string/sign_out_nav_entry" />
        </menu>
    </item>

</menu>
